--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -371,3 +371,6 @@ a:hover {
     display:block;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)!important;
 }
+form.search-form {
+    display: initial;
+}
