Create CRUD category

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -22,6 +22,7 @@
           <h1>Menu</h1>
             <ul>
               <li><%= link_to t('articles'), admin_articles_path  %></li>
+              <li><%= link_to 'Category', admin_category_url  %></li>
             </ul>
         </div>
         <div class="center-block col-md-9">
