--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,10 +8,7 @@
       <th>Parent</th>
       <th>Team</th>
       <th>Location</th>
-      <th>Alt text</th>
-      <th>Headline text</th>
-      <th>Caption text</th>
-      <th>Content</th>
+      <th>Title</th>
       <th>Comment</th>
       <th colspan="3"></th>
     </tr>
@@ -23,11 +20,7 @@
         <td><%= category.parent_id %></td>
         <td><%= category.team_id %></td>
         <td><%= category.location_id %></td>
-        <td><%= category.alt_text %></td>
-        <td><%= category.headline_text %></td>
-        <td><%= category.caption_text %></td>
-        <td><%= category.content %></td>
-        <td><%= category.comment %></td>
+        <td><%= category.title %></td>
         <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
