--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <%= render partial: 'shared/users_cabinet_tabs' %>
   <div class="row">
     <div class="col-md-3 text-center"></div>
     <div class="col-md-3 text-left">
