--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,39 @@
     <div class="row">
       <div class="center-block col-md-3">
         <h1>Menu</h1>
-        <ul>
-          <li><%= link_to t('articles'), articles_path  %></li>
-        </ul>
+        <nav id="main-nav">
+          <ul>
+            <li><%= link_to t('articles'), articles_path  %></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a>
+              <ul>
+                <li>
+                  <a href="#">Project 1</a>
+                  <ul>
+                    <li><a href="#">Project 2</a>
+                      <ul>
+                        <li><a href="#">Project 3</a>
+                          <ul>
+                            <li><a href="#">Project 4</a>
+                              <ul>
+                                <li><a href="#">Project 5</a></li>
+                              </ul>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li><a href="#">Project 2</a></li>
+                <li><a href="#">Project 3</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
       </div>
       <div class="center-block col-md-9">
-        <%# if current_page?(edit_user_registration_path) || current_page?(edit_user_path) %>
-          <%#= render partial: 'shared/users_cabinet_tabs' %>
-        <%# end %>
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
         <%= yield %>
