--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,82 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SportHubPortal</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>SportHubPortal</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-  <% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
-    <%= render partial: 'shared/header' %>
-  <% end %>
-  <body>
-  <% if current_page?(new_user_session_path()) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
-    <%= yield %>
-  <% else %>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="center-block col-md-3">
-          <h1>Menu</h1>
-          <nav id="main-nav">
-            <%  Category.all.each do |category| %>
-              <ul>
-                <% unless (category.parent_id) %>
-                  <li class="text-center p-2 shadow-sm"><%= link_to category.title, category %>
-                    <ul>
-                      <% debug Category.find_by(id: category.parent_id)  %>
-                        <% if (category.parent_id == category.id) %>
-                      <li class="text-center p-2 shadow-sm"><%= category.title %>
-                        <% end  %>
-                    </ul>
-                  </li>
-                <% end %>
-              </ul>
-            <% end %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
+  <%= render partial: 'shared/header' %>
+<% end %>
+<body>
+<% if current_page?(new_user_session_path()) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
+  <%= yield %>
+<% else %>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="center-block col-md-3">
+        <h1>Menu</h1>
+        <nav id="main-nav">
+
+          <% @categories.each do |category| %>
             <ul>
-              <li class="text-center p-2 shadow-sm" ><%= link_to t('articles'), articles_path  %></li>
-              <li class="text-center p-2 shadow-sm"><%= link_to 'Category', categories_path  %>
-                <ul>
-                  <li class="text-center p-2 shadow-sm">
-                    <a href="#">Project 1</a>
-                    <ul>
-                      <li class="text-center p-2 shadow-sm"><a href="#">Project 2</a>
-                        <ul>
-                          <li class="text-center p-2 shadow-sm"><a href="#">Project 3</a>
-                            <ul>
-                              <li class="text-center p-2 shadow-sm"><a href="#">Project 4</a>
-                                <ul>
-                                  <li class="text-center p-2 shadow-sm"><a href="#">Project 5</a></li>
-                                </ul>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="text-center p-2 shadow-sm"><a href="#">Project 2</a></li>
-                  <li class="text-center p-2 shadow-sm"><a href="#">Project 3</a></li>
-                </ul>
-              </li>
-              <li class="text-center p-2 shadow-sm"><a href="#">Contact</a></li>
+              <% unless (category.parent_id) %>
+                <li class="text-center p-2 shadow-sm"><%=
+                  link_to category.title, category %>
+                  <ul>
+                    <% category.descendants.each do |sub_category| %>
+                      <li class="text-center p-2 shadow-sm"><%=
+                        sub_category.title %></li>
+                    <% end %>
+                  </ul>
+                </li>
+              <% end %>
             </ul>
-          </nav>
-        </div>
-        <div id="blur"   class="center-block col-md-9 ">
-          <p class="notice"><%= notice %></p>
-          <p class="alert"><%= alert %></p>
-          <%= yield %>
-        </div>
+          <% end %>
+          <ul>
+            <li class="text-center p-2 shadow-sm"><%= link_to t('articles'), articles_path %></li>
+            <li class="text-center p-2 shadow-sm"><%= link_to 'Category', categories_path %>
+              <ul>
+                <li class="text-center p-2 shadow-sm">
+                  <a href="#">Project 1</a>
+                  <ul>
+                    <li class="text-center p-2 shadow-sm"><a href="#">Project 2</a>
+                      <ul>
+                        <li class="text-center p-2 shadow-sm"><a href="#">Project 3</a>
+                          <ul>
+                            <li class="text-center p-2 shadow-sm"><a href="#">Project 4</a>
+                              <ul>
+                                <li class="text-center p-2 shadow-sm"><a href="#">Project 5</a></li>
+                              </ul>
+                            </li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </li>
+                  </ul>
+                </li>
+                <li class="text-center p-2 shadow-sm"><a href="#">Project 2</a></li>
+                <li class="text-center p-2 shadow-sm"><a href="#">Project 3</a></li>
+              </ul>
+            </li>
+            <li class="text-center p-2 shadow-sm"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div id="blur" class="center-block col-md-9 ">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%= yield %>
       </div>
     </div>
-  <% end %>
+  </div>
+<% end %>
 
-  </body>
-  <% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
-    <%= render partial: 'shared/footer' %>
-  <% end %>
+</body>
+<% unless current_page?(new_user_session_path) || current_page?(new_user_registration_path) || current_page?(new_user_password_path) %>
+  <%= render partial: 'shared/footer' %>
+<% end %>
 
 </html>
