--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Article</h1>
 
-<%= render 'form', article: @article %>
+<%= render 'form', article: @admin_article %>
 
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Show', @admin_article %> |
+<%= link_to 'Back', admin_articles_path %>
