--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -68,9 +68,9 @@
           </ul>
         </nav>
       </div>
-      <div id="blur" class="center-block col-md-9 ">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+      <div id="blur" class="col-md-9">
+        <p class=""><%= notice %></p>
+        <p class=""><%= alert %></p>
         <%= yield %>
       </div>
     </div>
