--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,23 @@
       <div class="center-block col-md-3">
         <h1>Menu</h1>
         <nav id="main-nav">
+          <% @categories.each do |category| %>
+            <ul>
+              <% unless (category.parent_id) %>
+                <li class="text-center p-2 shadow-sm">
+                  <%= link_to category.title, category %>
+                  <% @sub_categories = Category.parent_categories(category.id);%>
+                  <ul>
+                    <% @sub_categories.each do |sub_category| %>
+                      <li class="text-center p-2 shadow-sm">
+                        <%= link_to sub_category.title, sub_category %>
+                      </li>
+                    <% end %>
+                  </ul>
+                </li>
+              <% end %>
+            </ul>
+          <% end %>
           <ul>
             <li><%= link_to t('articles'), articles_path  %></li>
             <li><a href="#">About</a></li>
@@ -53,8 +70,8 @@
         </nav>
       </div>
       <div class="center-block col-md-9">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+        <p class=""><%= notice %></p>
+        <p class=""><%= alert %></p>
         <%= yield %>
       </div>
     </div>
