--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,8 +16,7 @@
   </div>
 </div>
 <div class="col-md-9 py-3">
-  <span><%= @article.content %></span>
-
+  <%= @article.content.html_safe%>
 </div>
 
 
