--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -434,6 +434,17 @@ form.search-form {
     /*background-color:red;*/
 
 }
+.clickable-block {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+    font-weight: bold!important;
+    color: #000000!important;
+}
 
+.breadcrumb > li + li:before {
+    content: "\3E"!important;
+}
 
 
