--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,35 +1,43 @@
-<p id="notice"><%= notice %></p>
-<div class="container">
-
-<h1>Articles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Alt</th>
-      <th>Title</th>
-      <th>Caption</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.alt %></td>
-        <td><%= article.title %></td>
-        <td><%= article.caption %></td>
-        <td><%= article.content %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Article', new_article_path %>
+<%= render "shared/breadcrumbs" %>
+<div class=" w-75 d-flex image-section">
+  <div class="col-md-8"><%= image_tag("article_image.jpg") %></div>
+  <div class="col-md-4 vcenter-item">
+    <div class="image-text-wrapper shadow-lg tab-user-info ">
+      <div class="p-3 col text-left ">
+        <span class="text-secondary py-3">Published / <%=
+          # @article.created_at.strftime("%d.%m.%Y")
+        %></span><br/>
+        <span class="text-danger py-3"><%=
+          # @article.alt
+        %></span><br/>
+        <span class="text-dark"><%=
+          # @article.title
+        %></span>
+        <br/>
+        <br/>
+      </div>
+      <div>
+        <button type="button" class="btn btn-danger btn-danger-not-rounded">More</button>
+      </div>
+    </div>
+  </div>
 </div>
+<div class="col-md-9 py-3">
+  <%#= @article.content.html_safe%>
+  <% @articles.each do |article| %>
+    <div class="card flex-md-row shadow h-md-250 border-0 my-3">
+      <%= image_tag("article_image.jpg", {style:"min-width: 280px; height: 180px;",class: "card-img-right flex-auto d-none d-md-block p-2"} ) %>
+      <div class="card-body d-flex flex-column align-items-start">
+        <h3 class="mb-0"><%= link_to article.title, article, class:"d-inline-block mb-2 clickable-block" %></h3>
+        <p class="card-text mb-auto"><%= article.caption %></p>
+      </div>
+    </div>
+  <% end %>
+
+</div>
+
+<p id="notice"><%= notice %></p>
+<h1>Articles</h1>
+<br>
+<%= link_to 'New Article', new_article_path %>
+
