--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -29,12 +29,12 @@
             <ul>
               <% unless (category.parent_id) %>
                 <li class="text-center p-2 shadow-sm">
-                  <%= link_to category.title, category %>
+                  <%= link_to category.title, category_articles_path(category.id) %>
                   <% @sub_categories = Category.sub_categories(category.id);%>
                   <ul>
                     <% @sub_categories.each do |sub_category| %>
                       <li class="text-center p-2 shadow-sm">
-                        <%= link_to sub_category.title, sub_category %>
+                        <%= link_to sub_category.title, category_articles_path(sub_category.id) %>
                       </li>
                     <% end %>
                   </ul>
