--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,34 +11,41 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-group">
+    <% if article.image.attached? %>
+      <%=  image_tag article.image, style:"width:400px; display:block"%>
+    <% end %>
+    <%= form.label :image, class: "text-uppercase py-2" %>
+    <%= form.file_field :image, class: "form-control" %>
 
-  <div class="field">
-    <%= form.label :alt %>
-    <%= form.text_field :alt %>
+  </div>
+  <div class="form-group">
+    <%= form.label :alt, class: "text-uppercase py-2"  %>
+    <%= form.text_field :alt , class: "form-control"%>
   </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+  <div class="form-group">
+    <%= form.label :title, class: "text-uppercase py-2"  %>
+    <%= form.text_field :title , class: "form-control"%>
   </div>
 
-  <div class="field">
-    <%= form.label :caption %>
-    <%= form.text_field :caption %>
+  <div class="form-group">
+    <%= form.label :caption, class: "text-uppercase py-2"  %>
+    <%= form.text_field :caption, class: "form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :content %>
+  <div class="form-group">
+    <%= form.label :content, class: "text-uppercase py-2"  %>
     <%#= form.text_area :content %>
     <%= form.text_area :content, :class => 'tinymce', :rows => 10, :cols => 50 %>
   </div>
-  <div class="field">
-    <%= form.label :category_id %>
-    <%= form.select :category_id, options_from_collection_for_select(@categories, "id", "title"), :include_blank => true %>
+  <div class="form-group">
+    <%= form.label :category_id, class: "text-uppercase py-2"  %>
+    <%= form.select :category_id, options_from_collection_for_select(@categories, "id", "title"), :include_blank => true, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions py-3">
+    <%= form.submit "#{t('update')}", class: "btn-lg btn-danger " %>
   </div>
 <% end %>
 <%= tinymce %>
